cleaned up Home & Our story page

--- a/src/assets/tachyons/scss/_variables.scss
+++ b/src/assets/tachyons/scss/_variables.scss
@@ -71,9 +71,9 @@ $box-shadow-4: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ) !default;
 $box-shadow-5: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ) !default;
 $black: #0D0D0D !default;
 $near-black: #19181A !default;
-$dark-gray: #333 !default;
-$mid-gray: #343840 !default;
-$gray: #8590aa !default;
+$dark-gray: #344A52 !default;
+$mid-gray: #780000 !default;
+$gray: #A38B5D !default;
 $silver: #999 !default;
 $light-silver: #aaa !default;
 $moon-gray: #ccc !default;
@@ -128,7 +128,7 @@ $light-blue: #96ccff !default;
 $lightest-blue: #cdecff !default;
 $washed-blue: #f6fffe !default;
 $washed-green: #e8fdf5 !default;
-$washed-yellow: #F2B694 !default;
+$washed-yellow: #FFF0AC !default;
 $washed-red: #ffdfdf !default;
 $rose: #b19f9e !default;
 // Custom Media Query Variables
