--- a/src/assets/tachyons/scss/_variables.scss
+++ b/src/assets/tachyons/scss/_variables.scss
@@ -71,13 +71,13 @@ $box-shadow-4: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ) !default;
 $box-shadow-5: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ) !default;
 $black: #0D0D0D !default;
 $near-black: #19181A !default;
-$dark-gray: #344A52 !default;
-$mid-gray: #780000 !default;
-$gray: #A38B5D !default;
+$dark-gray: #474559 !default;
+$mid-gray: #736D5C !default;
+$gray: #8C8A70 !default;
 $silver: #999 !default;
 $light-silver: #aaa !default;
-$moon-gray: #ccc !default;
-$light-gray: #c4dbf6 !default;
+$moon-gray: #9392A6 !default;
+$light-gray: #A5A681 !default;
 $near-white: #F2F2F2 !default;
 $white: #fff !default;
 $transparent: transparent !default;
