Cleaned up siteheader & changed logo

--- a/src/assets/tachyons/scss/_variables.scss
+++ b/src/assets/tachyons/scss/_variables.scss
@@ -71,10 +71,10 @@ $box-shadow-4: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ) !default;
 $box-shadow-5: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 ) !default;
 $black: #0D0D0D !default;
 $near-black: #19181A !default;
-$dark-gray: #474559 !default;
-$mid-gray: #736D5C !default;
-$gray: #8C8A70 !default;
-$silver: #999 !default;
+$dark-gray: #232426 !default;
+$mid-gray:#3B3C40 !default;
+$gray:#8C837B !default;
+$silver:#BFB8B0 !default;
 $light-silver: #aaa !default;
 $moon-gray: #9392A6 !default;
 $light-gray: #A5A681 !default;
